use R2DBC converter, allow agents in tests